<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="72dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/toDolist_checkBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/textLayout"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="300"
            android:orientation="vertical">

            <TextView
                android:id="@+id/task_tile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:textSize="14sp"
                tools:text="@string/title" />

            <TextView
                android:id="@+id/task_datetime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/datetime_widget_todo" />

            <TextView
                android:id="@+id/taskDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/itemToDoDescription" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageEdit"
                android:layout_width="37dp"
                android:layout_height="40dp"
                android:contentDescription="@string/image_edit"
                app:srcCompat="@mipmap/ic_image_edit_todo_list" />

            <ImageView
                android:id="@+id/imageNotification"
                android:layout_width="37dp"
                android:layout_height="40dp"
                android:contentDescription="@string/image_notification"
                app:srcCompat="@mipmap/ic_image_notification_odolist_beproductive_foreground" />

        </LinearLayout>
    </LinearLayout>
    <View android:id="@+id/dividerToDo"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#bbbbbb"/>
</RelativeLayout>