<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.vspan.beproductive.com.Jhinmugen.vspan.beproductive.ActivityTips"
    tools:showIn="@layout/activity_tips">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/tipsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/firstTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:paddingEnd="4dp"
            android:paddingStart="4dp"
            android:text="@string/tips_first_tip"
            android:textAlignment="viewStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/secondTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:paddingEnd="4dp"
            android:paddingStart="4dp"
            android:text="@string/tips_second_tip"
            app:layout_constraintEnd_toEndOf="@+id/firstTip"
            app:layout_constraintStart_toStartOf="@+id/firstTip"
            app:layout_constraintTop_toBottomOf="@+id/firstTip" />

        <TextView
            android:id="@+id/thirdTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:paddingEnd="4dp"
            android:paddingStart="4dp"
            android:text="@string/tips_third_tip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/secondTip" />

        <TextView
            android:id="@+id/fourthTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:paddingEnd="4dp"
            android:paddingStart="4dp"
            android:text="@string/tips_fourth_tip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/thirdTip" />

        <TextView
            android:id="@+id/fifthTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:paddingEnd="4dp"
            android:paddingStart="4dp"
            android:text="@string/tips_fifth_tip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fourthTip" />

        <TextView
            android:id="@+id/sixthTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:paddingEnd="4dp"
            android:paddingStart="4dp"
            android:text="@string/tips_sixth_tip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fifthTip" />

        <TextView
            android:id="@+id/seventhTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:paddingEnd="4dp"
            android:paddingStart="4dp"
            android:text="@string/tips_seventh_tip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sixthTip" />

        <TextView
            android:id="@+id/eightTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:paddingEnd="4dp"
            android:paddingStart="4dp"
            android:text="@string/tips_eight_tip"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seventhTip" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>
